test/number/decimal_point_at_eof.lox
// error: expect property name after '.'
123.